--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "reactstrap": "^9.2.2"
   },
   "devDependencies": {
