--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.22.3",
     "reactstrap": "^9.2.2"
   },
