--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.22.3",
